# hrpc-rs

./: Cargo.toml  README.md  build.rs
example/: Cargo.toml
example/src/: example-rpc.proto  main.rs
examples/: basic.rs
examples-nodejs/: basic.js  messages.js  package.json
examples/basic/: Cargo.toml  build.rs
examples/basic/src/: main.rs  main_tcp.rs
examples/hyperspace/: Cargo.toml
examples/hyperspace/src/: bin.rs  freemap.rs  lib.rs  main.rs  schema.proto  session.rs  stream.rs
hrpc-build/: Cargo.toml
hrpc-build/src/: client.rs  fmt.rs  hrpc.proto  lib.rs  server.rs
src/: codegen.rs  decode.rs  error.proto  hrpc.proto  hypercore.proto  lib.rs  message.rs  next.rs  rpc.rs  sessions.rs  transport.rs
