[package]
name = "hrpc"
version = "0.0.1"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
async-std = "1.6.2"
prost = "0.6.1"
log = "0.4.8"
prost-types = "0.6.1"
async-trait = "0.1.36"
varinteger = "1.0.6"
bytes = "0.5.5"
parking_lot = "0.11.0"

[dev-dependencies]
env_logger = "0.7.1"
anyhow = "1.0.31"

[build-dependencies]
prost-build = "0.6"

[workspace]
members = ["hrpc-build", "examples/*"]
