[package]
name = "hrpc"
version = "0.0.1"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
async-std = { version = "1.9", features = ["unstable"] }
prost = "0.6.1"
log = "0.4.8"
prost-types = "0.6.1"
async-trait = "0.1.36"
varinteger = "1.0.6"
bytes = "0.5.5"
parking_lot = "0.11.0"
async-channel = "1.5.1"
thiserror = "1.0.23"

[dev-dependencies]
async-std = { version = "1.9", features = ["unstable", "attributes"] }
env_logger = "0.8.3"
anyhow = "1.0.31"
sluice = "0.5.4"

[build-dependencies]
prost-build = "0.6"

[workspace]
members = ["hrpc-build", "examples/*"]

# Needed until https://github.com/danburkert/prost/pull/317 is merged.
[patch.crates-io]
prost = { git = "https://github.com/Frando/prost", branch = "unknown_fields" }
prost-types = { git = "https://github.com/Frando/prost", branch = "unknown_fields" }
prost-build = { git = "https://github.com/Frando/prost", branch = "unknown_fields" }
