[package]
name = "hrpc-hyperspace"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
hrpc = { path = "../.." }
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.8"
async-trait = "0.1.36"
anyhow = "1.0.31"
prost = "0.6.1"
chashmap = "2.2.2"
parking_lot = "0.11.0"
hex = "0.4.2"

[build-dependencies]
hrpc-build = { path = "../../hrpc-build" }
