[package]
name = "hyperspace_client"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

[[bin]]
name = "hyperspace-client"
path = "src/bin.rs"

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
hrpc = { path = "../.." }
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.8"
async-trait = "0.1.36"
anyhow = "1.0.31"
prost = "0.6.1"
chashmap = "2.2.2"
parking_lot = { version = "0.11.0", features = ["send_guard"] }
hex = "0.4.2"

[build-dependencies]
hrpc-build = { path = "../../hrpc-build" }
